# homelab

./: README.md  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
docs/: devcontainer.md
