[project]
name = "homelab"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ansible-core==2.20.7",
    "prek==0.4.6",
]

[dependency-groups]
lint = [
    "ansible-lint==26.6.0",
]
test = [
    "ansible-navigator==26.6.0",
    "molecule==26.6.0",
    "molecule-plugins[docker]==25.8.12",
]

[tool.uv]
package = false
